Features updates # New reminder - date, time, notification fields added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,24 +22,31 @@ android {
     }
 }
 
+ext.glideVersion = '4.9.0'
+ext.arhitectureComponentsVersion = '2.0.0-beta01'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     //Butterknife
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
-    //ViewModel
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$arhitectureComponentsVersion"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$arhitectureComponentsVersion"
 
     //rxjava
     implementation "io.reactivex.rxjava2:rxjava:2.2.8"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 }
