--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
 
 ext.glideVersion = '4.9.0'
 ext.arhitectureComponentsVersion = '2.0.0-beta01'
+ext.roomVersion = '2.1.0-beta01'
+ext.daggerVersion = '2.15'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -49,4 +51,17 @@ dependencies {
     //glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+
+    // Room
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-rxjava2:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Dagger
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
 }
