--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.avukelic.remindme">
 
     <application
+        android:name=".RemindMeApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".RemindMeApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".view.MainActivity"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".view.MainActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".view.reminder.AddNewReminderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.reminder.SingleReminderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.authentication.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,11 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".view.reminders.AddNewReminderActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".view.reminders.SingleReminderActivity"
-            android:screenOrientation="portrait"/>
 
         <receiver android:name=".alarm.ReminderAlarm" />
     </application>
