--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,6 @@ android {
 
 ext.glideVersion = '4.9.0'
 ext.arhitectureComponentsVersion = '2.0.0-beta01'
-ext.roomVersion = '2.1.0-beta01'
 ext.daggerVersion = '2.15'
 
 dependencies {
@@ -34,6 +33,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0-alpha06'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
@@ -53,12 +53,6 @@ dependencies {
     //glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
-
-    // Room
-    implementation "androidx.room:room-runtime:$roomVersion"
-    implementation "androidx.room:room-rxjava2:$roomVersion"
-    annotationProcessor "androidx.room:room-compiler:$roomVersion"
-    androidTestImplementation "androidx.room:room-testing:$roomVersion"
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
